# auto-turso-table

./: .gitignore  README.md
auto_table/: Cargo.toml
auto_table/src/: extensions.rs  lib.rs  queries.rs  sql_helpers.rs
auto_table/src/conn/: mod.rs  turso.rs
auto_table_derive/: Cargo.toml
auto_table_derive/src/: lib.rs
