[package]
name = "auto_table"
version = "0.2.0"
edition = "2021"

[dependencies]
auto_table_derive = { path = "../auto_table_derive" }
tracing = "0.1.44"
turso = { version =  "0.6.1", optional = true }
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"

[features]
default = ["turso"]
turso = ["dep:turso"]
